feat: update k8s manifests and readme

--- a/kubernetes/2-secrets.yaml
+++ b/kubernetes/2-secrets.yaml
@@ -1,3 +1,4 @@
+# APP SECRETS
 apiVersion: v1
 kind: Secret
 metadata:
@@ -9,5 +10,15 @@ type: Opaque
 data:
   db-user: cG9zdGdyZXM=
   db-name: cHJvZHVjdHNfZGI=
-  db-host: cG9zdGdyZXMtZGI=
+  db-password: cG9zdGdyZXM=
+---
+# DATABASE SECRETS
+apiVersion: v1
+kind: Secret
+metadata:
+  name: database
+  namespace: database
+type: Opaque
+data:
+  db-user: cG9zdGdyZXM=
   db-password: cG9zdGdyZXM=
