--- a/kubernetes/1-namespace.yaml
+++ b/kubernetes/1-namespace.yaml
@@ -6,4 +6,9 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: database
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: datadog
