--- a/kubernetes/5-datadog-values.yaml
+++ b/kubernetes/5-datadog-values.yaml
@@ -1,7 +1,3 @@
-# helm repo add datadog https://helm.datadoghq.com
-# helm repo update
-# kubectl create secret generic datadog-secret --from-literal api-key=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX -n datadog
-# helm install datadog-agent -f datadog-values.yaml datadog/datadog -n datadog
 registry: gcr.io/datadoghq
 datadog:
   apiKeyExistingSecret: datadog-secret
@@ -11,3 +7,8 @@ datadog:
   logs:
     enabled: true
     containerCollectAll: true
+  processAgent:
+    enabled: true
+    processCollection: true
+  kubelet:
+    tlsVerify: false
